--- a/client/src/components/pages/styles/BuildCss.css
+++ b/client/src/components/pages/styles/BuildCss.css
@@ -1,3 +1,12 @@
+.btn-delete{
+  position: absolute;
+  right: 0;
+  margin-right: 10px;
+}
+.menu-container{
+  display: flex;
+  flex-direction: row;
+}
 .center-text{
   text-align: center;
 
