--- a/client/src/components/pages/styles/DashboardStyle.css
+++ b/client/src/components/pages/styles/DashboardStyle.css
@@ -1,5 +1,47 @@
+
+
+.dashboard-container{
+  text-align: center;
+
+}
+
 .card-container{
   margin-top: 5rem;
   float: left;
-  margin-left: 15vw;
+  margin-left: 40vw;
+}
+
+/* landing page */
+.footer{
+  background: #2c3e50;
+  min-height: 10vh;
+}
+.section{
+  padding: 1rem;
+  display: flex;
+  line-height: 1.2;
+  min-height: 40vh;
+}
+.about-text{
+  padding-top: 1.5rem;
+  width: 40vw;
+  font-size: 1.3rem;
+}
+.header-lg{
+  font-size: 5rem;
+}
+.header-md{
+  font-size: 1.5rem;
+}
+.landing-container{
+  height: 100vh;
+  background: #27ae60;
+}
+.landing-text{
+  padding-top: 20vw;
+  margin-left: 20vw;
+  color: #2c3e50;
+}
+*{
+  color: #2c3e50;
 }
